--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Hi!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum officiis dolor maiores eos ipsa provident ducimus sapiente inventore tempora saepe atque sed exercitationem ullam necessitatibus molestias repellendus repellat, aspernatur magnam.</p>
+    <ul>
+        <li>Ready</li>
+        <li>Steady</li>
+        <li>Go</li>
+    </ul>
 </body>
 </html>
